# rivet-head-diary

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  justfile
api/: Cargo.toml
api/src/: main.rs
api/src/lib/: authentication.rs  config.rs  data_access_layer.rs  errors.rs  lib.rs  renderer.rs  startup.rs  telemetry.rs  time.rs
api/src/lib/domain/: api_service.rs  mod.rs
api/src/lib/handlers/: authorization.rs  health.rs  health_check.rs  mod.rs  protected.rs
api/tests/api/: authorization.rs  health_check.rs  helpers.rs  main.rs  protected.rs
site/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
site/src/lib/: app.rs  lib.rs
site/src/lib/components/: footer.rs  header.rs  input.rs  mod.rs  navigation.rs
site/src/lib/views/: admin.rs  blog.rs  diary.rs  home.rs  login.rs  mod.rs  root.rs  unauthorized.rs
templates/: index.html
