# crusty-rustacean api configuration
[package]
name = "rivet-head-diary-api"
version = "0.6.0"
edition = "2021"
publish = false

# binary
[[bin]]
name = "rivet-head-diary-api"
path = "src/bin/main.rs"

[lib]
name = "rivet_head_diary_api_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = [ "serde", "clock" ] }
http = "1"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-axum = "0.46.0"
shuttle-runtime = { version = "0.46.0", default-features = false }
shuttle-shared-db = { version = "0.46.0", features = [ "postgres", "sqlx" ] }
sqlx = "0.7.4"
tera = "1.20.0"
tokio = "1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [ "cors", "fs", "normalize-path", "request-id", "trace", "util" ] }
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [ "registry", "env-filter"] }
uuid = "1.10.0"

[dev-dependencies]
reqwest = { version = "0.12.5", features = [ "json" ] }
