# crusty-rustacean api configuration
[package]
name = "rivet-head-diary-api"
version = "0.8.0"
edition = "2021"
publish = false

# binary
[[bin]]
name = "rivet-head-diary-api"
path = "src/bin/main.rs"

[lib]
name = "rivet_head_diary_api_lib"
path = "src/lib/lib.rs"

[dependencies]
rocket = "0.5.1"
shuttle-rocket = "0.47.0"
shuttle-runtime = "0.47.0"
