# crusty-rustacean api configuration
[package]
name = "rivet-head-diary"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
version = "0.9.0"
edition = "2021"
description = "A full stack Rust app, front in Yew, back in Axum, for recording my music listening habits"
readme = "README.md"
repository = "https://github.com/sentinel1909/rivet-head-diary.git"
license = "MIT"
publish = false

[dependencies]
axum = "0.7.5"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tower-http = { version = "0.5.2", features = [ "fs"] }
