# crusty-rustacean site configuration
[package]
name = "rivet-head-diary-site"
version = "0.9.1"
edition = "2021"
publish = false

# binary
[[bin]]
name = "rivet-head-diary-site"
path = "src/bin/main.rs"

[lib]
name = "rivet_head_diary_site_lib"
path = "src/lib/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.5.0", features = [ "json" ] }
log = "0.4.22"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.120"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
